<resources>
    <string name="app_name">LogisHub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_home">Home</string>
    <string name="action_gps">GPS</string>
    <string name="action_settings">Settings</string>
    <string name="kakao_app_key">392bf266bcf1c3a68db9504fa55bc6d5</string>
    <string name="server_client_id">601047722335-6nv6ctbnjcdjuplcfev90vfmnnk9g1fd.apps.googleusercontent.com</string>
    <string name="facebook_app_id">185979741818363</string>

    <!-- Strings related to login -->
    <string name="prompt_email">ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">회원가입하기</string>
    <string name="action_find_pw">비밀번호찾기</string>
    <string name="action_auth_phone">인증번호받기</string>
    <string name="action_auth_phone2">인증확인</string>
    <string name="action_config_title">환경설정</string>
    <string name="action_config_check1">PUSH 사용 여부</string>
    <string name="action_config_check2">GPS 사용 여부</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- Strings related to navigation drawer -->
    <string name="menu_home">홈</string>
    <string name="menu_community">커뮤니티</string>
    <string name="menu_message">메세지</string>
    <string name="menu_more">더보기</string>

    <string name="agreement_title">이용약관 내용보기</string>
    <string name="agreement_first">개인정보취급방침 내용보기</string>
    <string name="agreement_second">위치기반서비스 이용약관 내용보기</string>
    <string name="agreement_third">유료서비스 약관 내용보기</string>
    <string name="agreement_fourth">화물정보망 이용약관 내용보기</string>
    <string name="agreement_accept">이용약관을 숙지하고 회원으로 가입합니다.</string>

    <string name="shortname_title">이용약관</string>
    <string name="shortname_first">개인정보취급방침</string>
    <string name="shortname_second">위치기반서비스</string>
    <string name="shortname_third">유료서비스</string>
    <string name="shortname_fourth">화물정보망</string>

    <string name="phone_number_hint">핸드폰번호</string>
    <string name="phone_auth_number_hint">인증번호받기</string>

    <string name="member_name">가입자명</string>
    <string name="member_type">가입자유형</string>

    <string name="agreement_full_text">회원가입을 하면 로지스허브의 이용약관, 개인정보취급방침, 위치기반서비스, 유료서비스, 화물정보망에 동의하는 것으로 간주합니다.</string>

    <string name="action_register_freightinfo">화물등록</string>
    <string name="select_template">템플릿</string>
    <string name="select_template_open">템플릿 불러오기</string>
    <string name="select_loading">상차지</string>
    <string name="select_loading1">상차지 *</string>
    <string name="select_loading2">상차지주소</string>
    <string name="select_loading_time">상차시간</string>
    <string name="select_alight">하차지</string>
    <string name="select_alight1">하차지 *</string>
    <string name="select_alight2">하차지선택</string>
    <string name="select_alight3">하차지자유입력</string>
    <string name="select_alight_time">하차시간 *</string>
    <string name="select_model1">차종 *</string>
    <string name="select_model2">특장 *</string>
    <string name="select_charge">운송료</string>
    <string name="select_target">게시대상 *</string>
    <string name="select_company_name">업체명</string>
    <string name="select_company_contact">업체연락처</string>
    <string name="select_etc">비고</string>
    <string name="select_loading_method">상차방법</string>
    <string name="select_alight_method">하차방법</string>
    <string name="select_transport">운송</string>
    <string name="select_payment">결제</string>
    <string name="select_payload">적재물</string>
    <string name="select_weight">중량</string>
    <string name="select_width">제원폭</string>
    <string name="select_height">제원높이</string>
    <string name="select_length">제원길이</string>
    <string name="select_special">특수선택</string>
    <string name="select_coummunity">커뮤니티 선택하기</string>
    <string name="select_term">조회기간</string>
    <string name="action_inquiry_freightinfo">조회</string>
    <string name="select_view_method">조회방법</string>
    <string name="select_classify_conclude">상태</string>
    <string name="select_driver">운전자</string>
    <string name="freightinfo_open">추가입력열기</string>
    <string name="freightinfo_close">추가입력닫기</string>
    <string name="select_time">시간</string>
    <string name="select_date">날짜</string>
    <string name="pickup">상차</string>
    <string name="delivery">하차</string>
    <string name="cancel">취소</string>
    <string name="modify">수정</string>
    <string name="delete">삭제</string>
    <string name="save">저장</string>
    <string name="registration">등록</string>
    <string name="reregistration">복사</string>
    <string name="templete">템플릿</string>
    <string name="ton_code">톤수 설정</string>
    <string name="apply">신청</string>
    <string name="cargo_info">차량정보</string>
    <string name="expect_time">예상시간</string>

    <!--구인구직-->
    <string name="recruit_company">회사명</string>
    <string name="recruit_manager">담당자</string>
    <string name="recruit_tel">전화번호</string>
    <string name="recruit_fax">F A  X</string>
    <string name="recruit_address">주&#160;&#160;&#160;소</string>
    <string name="recruit_close">마감일</string>
    <string name="recruit_job">직&#160;&#160;&#160;종</string>
    <string name="recruit_area">지&#160;&#160;&#160;역</string>
    <string name="recruit_num">모집인원</string>
    <string name="recruit_detail">상세정보</string>
    <string name="action_register_recruit">지원하기</string>

    <string name="welcome_title">Welcome\nto LogisHub</string>
    <string name="welcome_sub1">로지스허브에 오신 것을 환영합니다.</string>
    <string name="welcome_sub2">아래의 내용을 기입해 주시고 즐거운\n로지스허브 생활을 이어가십시오.</string>
    <string name="welcome_next1">계속하기</string>
    <string name="welcome_next2">건너뛰기</string>

    <string name="welcome_owner">재고 및 화물운송 관제 등 물류 모니터링이 필요한 화주</string>
    <string name="welcome_forwarder">수출입 업무와 화물 모니터링이 필요한 포워더</string>
    <string name="welcome_company">운송관리 및 화물추적이 필요한 운송사/주선사</string>
    <string name="welcome_driver">화물정보망이나 운송사의 배차를 희망하는 운전자</string>
    <string name="welcome_3pl">재고관리 및 창고업무가 필요한 물류업체</string>

    <string name="no_data">데이터가 없습니다.</string>

    <string name="allocation">배차중</string>
    <string name="complete">완료</string>
    <string name="allocation_fail">배차실패</string>
    <string name="transfer">운행중</string>


</resources>
