<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.logishub.mobile.launcher.v5.AgreementActivity">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnAgreement1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="50dp"
        android:padding="17dp"
        android:text="@string/agreement_title"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnAgreement2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:padding="17dp"
        android:text="@string/agreement_first"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnAgreement3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:padding="17dp"
        android:text="@string/agreement_second"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnAgreement4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:padding="17dp"
        android:text="@string/agreement_third"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnAgreement5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:padding="17dp"
        android:text="@string/agreement_fourth"/>

    <CheckBox
        android:id="@+id/cbAgreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:text="@string/agreement_accept"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
